--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 title: Art Me Association
 theme: jekyll-theme-cayman
 show_downloads: false
+
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
