--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
 title: Art Me Association
 theme: jekyll-theme-cayman
 show_downloads: false
-
-defaults:
-  - scope:
-      path: "assets/img"
-    values:
-      image: true
+google_analytics: UA-125557354-1
